# pigeki

./: RP2040_minimal.kicad_pcb  RP2040_minimal.kicad_prl  RP2040_minimal.kicad_pro  RP2040_minimal.kicad_sch
RP2040_minimal.pretty/: USB_C_Receptacle_Palconn_UTC16-G.kicad_mod
chopper.pretty/: almight.kicad_mod  chopper_logo.kicad_mod  monster.kicad_mod  pony.kicad_mod  smiley_line.kicad_mod
firmware/: CMakeLists.txt  LICENSE
firmware/srcs/: main.c  usb_descriptors.c
gerbers/: pigeki-B_Cu.gbr  pigeki-B_Mask.gbr  pigeki-B_Paste.gbr  pigeki-B_Silkscreen.gbr  pigeki-Edge_Cuts.gbr  pigeki-F_Cu.gbr  pigeki-F_Mask.gbr  pigeki-F_Paste.gbr  pigeki-F_Silkscreen.gbr  pigeki-NPTH.drl  pigeki-PTH.drl  pigeki-job.gbrjob
